# wedding

./: .gitignore  .tflint.hcl  biome.jsonc  bootstrap.sh  devenv.nix  readme.md  renovate.json
.github/workflows/: deploy.yml
backend/: .gitignore  Dockerfile  app.py  email.html  guest.ics  pyproject.toml  relative.ics  ruff.toml
backend/src/wedding/: constants.py  entrypoint.py  handlers.py  models.py  util.py
backend/src/wedding/routes/: responses.py  rsvp.py
frontend/: README.md  WEDDING_README.md  next.config.ts  package.json  pnpm-lock.yaml
frontend/src/app/: Details.tsx  Footer.tsx  Gallery.tsx  Header.tsx  RsvpForm.tsx  Timeline.tsx  globals.css  layout.tsx  page.tsx
frontend/src/app/api/rsvp/: route.ts
frontend/src/app/details/: page.tsx
frontend/src/app/gallery/: page.tsx
frontend/src/app/our-story/: page.tsx
frontend/src/app/responses/: page.tsx
frontend/src/app/rsvp/: page.tsx
frontend/src/app/thank-you/: page.tsx
frontend/src/components/: AppShellLayout.tsx  ArrowButton.tsx  CalendarButton.tsx  RSVPForm.tsx  SlideContent.tsx  Slideshow.tsx  slides.tsx
frontend/src/components/ui/: button.tsx  card.tsx
frontend/src/lib/: constants.ts  utils.ts
iac/: .terraform.lock.hcl  main.tf  outputs.tf  projects.tf  terraform.tfvars  variables.tf
iac/modules/ecr/: main.tf  variables.tf
iac/modules/github_oidc/: main.tf  outputs.tf  variables.tf
iac/modules/lambda/: main.tf  outputs.tf  roles.tf  variables.tf
iac/modules/s3_state/: main.tf  outputs.tf  variables.tf
