[project]
name = "wedding-backend"
version = "0.1.0"
description = "Wedding Backend"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.6",
    "pydantic>=2.10.3",
    "pydantic-settings>=2.6.1",
    "httpx>=0.28.1",
    "boto3>=1.35.90",
    "email-validator>=2.2.0",
]

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "boto3-stubs[dynamodb,sesv2]>=1.35.90",
]
